# simple-pool-memory

./: .gitignore  CMakeLists.txt  README.md  findNexrWords  main.cpp  task1.py
examples/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  cancel.cpp  cancel.h  functional.h  io_util.cpp  io_util.h  macros.h  status.h
